# Migrator

./: .gitignore  .gitmodules  Build.cmd  Build.sh  CMakeLists.txt  Migrator.sln  Migrator.vcxproj  Migrator.vcxproj.filters  StdAfx.h  Technical task.docx  argparse.hpp  git_submodules_update.cmd  git_submodules_update.sh  main.cpp
Migrator/: CMakeLists.txt  IDatabase.cpp  IDatabase.h  IDatabasePostgreSQL.cpp  IDatabasePostgreSQL.h  IDatabaseSQLite.cpp  IDatabaseSQLite.h  IQuery.cpp  IQuery.h  IQueryPostgreSQL.cpp  IQueryPostgreSQL.h  IQuerySQLite.cpp  IQuerySQLite.h  MRDatabase.cpp  MRDatabase.h  MRDefDatabase.h  MRLogger.cpp  MRLogger.h  MRMetaData.cpp  MRMetaData.h  MRMigrator.cpp  MRMigrator.h  MRQuery.cpp  MRQuery.h  MRSQLProcessor.cpp  MRSQLProcessor.h  MRTemplate.cpp  MRTemplate.h  MRUtils.cpp  MRUtils.h  Migrator.rc  Migrator.vcxproj  Migrator.vcxproj.filters  TMetaClass.h  main.cpp
Signer/: CMakeLists.txt  Signer.rc  Signer.vcxproj  Signer.vcxproj.filters  main.cpp
msvc/: Migrator.vcxproj  Migrator.vcxproj.filters  Signer.vcxproj  Signer.vcxproj.filters
resources/: MakeTransit.sql  PostgreSQL.smd  SQLite.smd  Template.smd  Transit.smd
src/Migrator/: CMakeLists.txt  IDatabasePostgreSQL.cpp  IDatabaseSQLite.cpp  IDatabaseSQLite.h  IQuerySQLite.cpp  MRConfig.cpp  MRConfig.h  MRDefDatabase.cpp  MRDefDatabase.h  MRException.cpp  MRException.h  MRLibrary.cpp  MRLibrary.h  MRLogger.cpp  MRLogger.h  MRMetaData.cpp  MRMetaData.h  MRMigrator.cpp  MRMigrator.h  MRSQLProcessor.cpp  MRTemplate.h  MRUtils.cpp  MRUtils.h  SimpleIni.cpp  SimpleIni.h  TMetaClass.cpp  TMetaClass.h  main.cpp
src/Signer/: CMakeLists.txt  main.cpp
src/utils/: ConvertUTF.c  ConvertUTF.h  MRConstants.cpp  MRConstants.h  MRContainer.cpp  MRContainer.h  MRCrypt.cpp  MRCrypt.h  MRDateTime.cpp  MRDateTime.h  MRFileSystem.cpp  MRFileSystem.h  MRString.cpp  MRString.h  MRTypedefs.cpp  MRTypedefs.h  StdAfx.cpp  StdAfx.h  argparse.h  tinyxml2.cpp  tinyxml2.h
src_share/: MRConstants.h  MRVersion.h.in
